# agent-oss-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
agentsoss/: __init__.py  cli.py  config.py  setup_wizard.py
agentsoss/agent/: __init__.py  prompt.py  runner.py
