[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsoss"
version = "0.1.0"
description = "Autonomous LLM agent for open source contributions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agents", "llm", "open-source", "autonomous", "github", "claude"]
authors = [
    { name = "AgentsOSS", email = "smitlunagariya.mat18@itbhu.ac.in" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "click",
    "requests",
    "pyyaml",
    "rich",
    "platformdirs",
]

[project.urls]
Homepage = "https://github.com/agents-oss-only/agent-oss-cli"
Repository = "https://github.com/agents-oss-only/agent-oss-cli"
Issues = "https://github.com/agents-oss-only/agent-oss-cli/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "responses", "ruff", "mypy"]

[project.scripts]
agentsoss = "agentsoss.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentsoss"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
